test/good/basic/bool1.px

a = true
b = false
c = 0

if a or b:
    c = 21 * 2
else:
    a = false

if true and a and (false or not false):
    c / 1 - 0
elif true:
    skip
