test/bad/types4.px

if false:
    skip
elif false or 0:
    skip
